projects/design-system/src/app/layout/layout.scss
@use 'helpers' as *;

:host {
  height: 100vh;
  width: 100%;
  display: grid;
  grid-template-columns: p2r(400) 1fr;

  @include breakpoint(-centi) {
    grid-template-columns: 1fr;
  }
}

[sidenav] {
  display: flex;
  flex-direction: column;
  height: 100vh;
  overflow: hidden;
}

header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: p2r(20);
  gap: p2r(12);
  border-bottom: var(--border-10);
}

.actions {
  display: flex;
  align-items: center;
  gap: p2r(12);

  a,
  .icon-btn {
    display: inline-flex;
    text-decoration: none;
    color: var(--base-12);
    background: none;
    border: none;
    padding: 0;
    cursor: pointer;

    &:hover {
      color: var(--primary-8);
    }
  }
}

.search-wrapper {
  padding: p2r(0 0 12);
}

.search-trigger {
  display: flex !important;
  width: 100%;
  justify-content: space-between;
  align-items: center;
  box-sizing: border-box;
  font-weight: normal;

  [shButton] {
    width: 100%;
  }

  .search-left {
    display: flex;
    align-items: center;
    gap: p2r(8);
    flex: 1 0;
  }

  sh-kbd {
    font-size: p2r(10);
    opacity: 0.8;
  }
}

sh-list {
  @include overflowScrolling();

  flex: 1 0;
}

.toggle-sidebar {
  position: relative;

  .cross,
  .burger {
    opacity: 1;
    transition: opacity 124ms linear;

    &.hidden {
      opacity: 0;
    }
  }

  .cross,
  .burger {
    position: absolute;
    margin: auto;
  }
}

